Upgrade to PassYeti project.

--- a/components/ReloadButton.module.css
+++ b/components/ReloadButton.module.css
@@ -1,20 +1,17 @@
-.reload_button{
+.reload_button {
     margin-left: auto;
-    padding:3px;
-    /* position: relative; */
-    display: grid;
-    grid-template-columns: auto 14px;
+    padding: 3px;
+    display: flex;
+    align-items: center;
+    gap: 4px;
 }
-.reload_button:hover{
+.reload_button:hover {
     cursor: pointer;
     transform: scale(1.08);
 }
-.reloads_left{
-    font-size: 14px;
+.reloads_left {
+    font-size: 12px;
     font-weight: bold;
-    /* position: absolute;
     right: 1px;
-    bottom: 1px; */
-    /* padding: 1px 2px 1px 2px; */
-    align-self: end;
+    bottom: 1px;
 }
