--- a/app/globals.css
+++ b/app/globals.css
@@ -1,57 +1,40 @@
+html, body {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+}
+* {
+    box-sizing: border-box;
+}
 body {
-    background-color: #fffaff;
+    background-color: #f4f7f9;
     color: #0A0F0D;
-    font-family: 'Roboto Mono', 'Consolas', monospace, sans-serif;
+    font-family: 'Nunito', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     margin: 0;
-    
-    /* halftone */
-    /* https://css-irl.info/css-halftone-patterns/ */
-    --color: #fff0ff;
-    --dotSize: 0.25rem;
-    --bgSize: 1.35rem;
-    --bgPosition: calc(var(--bgSize) / 2);
-
-    background-image: radial-gradient(
-        circle at center,
-        var(--color) var(--dotSize),
-        transparent 0
-        ), radial-gradient(circle at center, var(--color) var(--dotSize), transparent 0);
-    background-size: var(--bgSize) var(--bgSize);
-    background-position: 0 0, var(--bgPosition) var(--bgPosition);
-    
 }
-
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
-
-a{
+a {
     color: dodgerblue;
     text-decoration: none;
 }
-
-
 .shake {
-    /* Start the shake animation and make the animation last for 0.5 seconds */
-    animation: shake 1s;
-
-    /* When the animation is finished, start again */
-    animation-iteration-count: infinite;
+    animation: shake 0.5s;
+    animation-iteration-count: 1;
 }
-
 @keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    5% { transform: translate(-1px, -2px) rotate(-1deg); }
-    10% { transform: translate(-3px, 0px) rotate(1deg); }
-    15% { transform: translate(3px, 2px) rotate(0deg); }
-    20% { transform: translate(1px, -1px) rotate(1deg); }
-    25% { transform: translate(-1px, 2px) rotate(-1deg); }
-    30% { transform: translate(-3px, 1px) rotate(0deg); }
-    35% { transform: translate(3px, 1px) rotate(-1deg); }
-    40% { transform: translate(-1px, -1px) rotate(1deg); }
-    45% { transform: translate(1px, 2px) rotate(0deg); }
-    50% { transform: translate(1px, -2px) rotate(-1deg); }
+    0% { transform: translateX(0); }
+    10% { transform: translateX(-10px); }
+    20% { transform: translateX(10px); }
+    30% { transform: translateX(-10px); }
+    40% { transform: translateX(10px); }
+    50% { transform: translateX(-10px); }
+    60% { transform: translateX(10px); }
+    70% { transform: translateX(-10px); }
+    80% { transform: translateX(10px); }
+    90% { transform: translateX(-10px); }
+    100% { transform: translateX(0); }
 }
