--- a/components/PasswordBox.css
+++ b/components/PasswordBox.css
@@ -1,33 +1,42 @@
 .pswdbox_label {
     text-align: left;
-    font-size: 15px;
-    margin-bottom: 6px;
+    font-size: 18px;
     padding: 0 10px 2px 10px;
+    margin-top: 60px;
+    margin-bottom: 2px;
+    font-weight: 600;
+    color: #555;
+    display: flow-root;
 }
-
 .pswdbox {
+    display: block;
     box-sizing: border-box;
     text-align: left;
     background: #fff;
-    border: 2px solid #0A0F0D;
-    font-size: 22px;
-    /* border-radius:3px; */
-    padding: 12px 16px;
-    margin-top: 5px;
+    border: 2px solid #ddd;
+    font-size: 24px;
+    font-family: Monospace;
+    border-radius: 12px;
+    padding: 10px 22px 14px 22px;
+    margin-top: 0;
     margin-bottom: 20px;
-    box-shadow: 8px 8px 1px 0px rgba(209,197,209,0.5);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    transition: all 0.3s ease;
+    line-height: 1.4;
+    width: 100%;
 }
-
-.pswdbox:hover{
-    box-shadow: 10px 10px 1px 0px rgba(209,197,209,0.6);
+.pswdbox:hover {
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
 }
-.pswdbox:focus-within{
-    border: 2px solid #533ea5;
+.pswdbox:focus-within {
+    border: 2px solid #0580c5;
     outline:none;
 }
-
 .psswd_len {
     text-align: right;
-    margin: 3px 5px 10px 0px;
+    margin: 3px 5px 0 0px;
     float: right;
+    font-size: 18px;
+    font-weight: 600;
+    color: #555;
 }
